[gd_scene load_steps=2 format=3 uid="uid://b1234gameover"]

[ext_resource type="Script" uid="uid://htgwgnarr820" path="res://scripts/GameOver.gd" id="1_gameover"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_gameover")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.8)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "GAME OVER"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Final Score: 0"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Restart Game"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"
